# compstat-rio-platform

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
backend/: __init__.py  main.py  schemas.py
dados/: Dicionário de dados.xlsx  cameras_areas_fm.csv  fatores_urbanos.csv
relint_gen/: __init__.py  config.py  data_loaders.py  filters.py  llm.py  pdf_renderer.py  pipeline.py  prompts.py  template.py
relints/: Cópia de RI_010_2026_Rodoviaria_Terminal_Gentileza.docx  Cópia de RI_011_2026_Metro_Botafogo_Sao_Clemente.docx  Cópia de RI_012_2026_Jardim_de_Alah.docx  Cópia de RI_013_2026_Campo_Grande_Estacao_Calcadao.docx  Cópia de RI_014_2026_Rio_Sul.docx  Cópia de RI_015_2026_Praia_Botafogo_Marques_Abrantes.docx  Cópia de RI_016_2026_Estacoes_SFX_Afonso_Pena.docx  Cópia de RI_017_2026_Presidente_Vargas_Campo_Santana.docx
scripts/: extract_template.py  generate_relint.py  run-dev.sh  test_loaders.py
sh_area_forca/: areas_forca_municipal.dbf  areas_forca_municipal.qmd  areas_forca_municipal.shp  areas_forca_municipal.shx
templates/: Cópia de RI_010_2026_Rodoviaria_Terminal_Gentileza.json  Cópia de RI_011_2026_Metro_Botafogo_Sao_Clemente.json  Cópia de RI_012_2026_Jardim_de_Alah.json  Cópia de RI_013_2026_Campo_Grande_Estacao_Calcadao.json  Cópia de RI_014_2026_Rio_Sul.json  Cópia de RI_015_2026_Praia_Botafogo_Marques_Abrantes.json  Cópia de RI_016_2026_Estacoes_SFX_Afonso_Pena.json  Cópia de RI_017_2026_Presidente_Vargas_Campo_Santana.json
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  (+2 more)
(+16 files in other folders)
